--- a/style.css
+++ b/style.css
@@ -1,1 +1,31 @@
+@charset "UTF-8";
 
+body {
+    background-color: rgb(186, 186, 209);
+}
+.titulopricipal{
+    text-align: center;
+    color: rgb(27, 27, 87);
+    font-size: 40px;
+}
+.paragrafoconteudo {
+    font-size: 25px;
+    justify-content: center
+}
+ul {
+    columns: 3;
+}
+ul li {
+    text-align: left;
+    font-size: 18px;
+    margin: 3px;
+}
+ul img{
+    max-width: 300px;
+    width: 100%;
+    margin-top: 20px;
+}
+table img {
+    max-width: 500px;
+    width: 77%
+}
