--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
 
 body {
     background-color: rgb(186, 186, 209);
+    margin: 0px;
+}
+main {
+    background-color: rgb(199, 199, 199);
+    width: 80%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    text-indent: 20px;
 }
 .titulopricipal{
     text-align: center;
@@ -10,12 +19,15 @@ body {
 }
 .paragrafoconteudo {
     font-size: 25px;
-    justify-content: center
+    text-align: justify;
+    text-indent: 20px;
+    margin: 20px;
 }
 ul {
     columns: 3;
 }
 ul li {
+    list-style-position: inside;
     text-align: left;
     font-size: 18px;
     margin: 3px;
@@ -25,7 +37,39 @@ ul img{
     width: 100%;
     margin-top: 20px;
 }
+table {
+    width: 80%;
+    margin: auto;
+    border-collapse: collapse;
+    background-color: slategray;
+
+}
+table caption {
+    font-size: 18px;
+    margin: 10px;
+    font-weight: bold;
+}
+td {
+    border: 2px solid rgba(63, 63, 63, 0.541);
+}
 table img {
-    max-width: 500px;
-    width: 77%
+    width: 98%;
+    border-radius: 10px;
+    padding: 6px 4px 4px 4px;
+    margin: 0px;
+}
+.pais {
+    width: 50%;
+    text-align: center;
+}
+.interesse {
+    font-size: 18px;
+    text-align: center;
+}
+footer {
+    background-color: slategray;
+    height: 50px;
+    text-align: center;
+    padding: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
